--- a/pages/consultation.html
+++ b/pages/consultation.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PROMIL</title>
+    <title>Consultation</title>
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/consultation.css">
     <link rel="stylesheet" href="/css/main.css">
@@ -103,41 +103,41 @@
  
  
     <!-- Footer -->
- <footer>
-    <div class="footer-konten">
-        <!-- Promil -->
-        <div>
-            <h1 style="color: #00329B;">Promil</h1>
-            <p style="padding-top: 15px; width: 372px;">PROMIL helps provide information related to pregnancy.</p>
-            <p style="margin-top: 36px;">@promil.idn</p>
+    <footer>
+        <div class="footer-konten">
+            <!-- Promil -->
+            <div>
+                <h1 style="color: #00329B;">Promil</h1>
+                <p style="padding-top: 15px; width: 372px;">PROMIL helps provide information related to pregnancy.</p>
+                <p style="margin-top: 36px;">@promil.idn</p>
+            </div>
+            <!-- About us -->
+            <div style="margin-left: 78px;">
+                <h1>About us</h1>
+                <p style="padding-top: 15px;">PROMIL</p>
+                <p style="transform: translateY(-10px);">Portofolio</p>
+                <p style="transform: translateY(-20px);">Careers</p>
+                <p style="transform: translateY(-30px);">Contact us</p>
+            </div>
+            <!-- Contact us -->
+            <div style="margin-left: 143px;">
+                <h1>Contact us</h1>
+                <p style="padding-top: 15px; width: 282px;">Jl. Sidoluhur No. 10 Baciro Gondokusuman Yogyakarta</p>
+                <p style="padding-top: 20px;">+62 857 4374 8914</p>
+            </div>
+            <!-- Sosial Media -->
+            <div class="footer-sosmed">
+                <img src="/image/landing_footer_facebook.svg" alt="">
+                <img src="/image/landing_footer_instagram.svg" alt="">
+                <img src="/image/landing_footer_twitter.svg" alt="">
+                <img src="/image/landing_footer_linkedin.svg" alt="">
+            </div>
         </div>
-        <!-- About us -->
-        <div style="margin-left: 78px;">
-            <h1>About us</h1>
-            <p style="padding-top: 15px;">PROMIL</p>
-            <p style="transform: translateY(-10px);">Portofolio</p>
-            <p style="transform: translateY(-20px);">Careers</p>
-            <p style="transform: translateY(-30px);">Contact us</p>
-        </div>
-        <!-- Contact us -->
-        <div style="margin-left: 143px;">
-            <h1>Contact us</h1>
-            <p style="padding-top: 15px; width: 282px;">Jl. Sidoluhur No. 10 Baciro Gondokusuman Yogyakarta</p>
-            <p style="padding-top: 20px;">+62 857 4374 8914</p>
-        </div>
-        <!-- Sosial Media -->
-        <div class="footer-sosmed">
-            <img src="/image/landing_footer_facebook.svg" alt="">
-            <img src="/image/landing_footer_instagram.svg" alt="">
-            <img src="/image/landing_footer_twitter.svg" alt="">
-            <img src="/image/landing_footer_linkedin.svg" alt="">
-        </div>
-    </div>
 
-    <div style="border-bottom: 1px solid #D2D2D2; width: 100%; margin-top:50px;"></div>
-    <p style="font-size: 13px; color: #686868; margin-top: 29px;">Copyright ® 2021 Lorem All rights Rcerved</p>
-    
-</footer>
+        <div style="border-bottom: 1px solid #D2D2D2; width: 100%; margin-top:50px;"></div>
+        <p style="font-size: 13px; color: #686868; margin-top: 29px;">Copyright ® 2021 Lorem All rights Rcerved</p>
+        
+    </footer>
 
 <script src="/javascript/navigationNavbar.js"></script>
 <script src="/javascript/dokter.js"></script>
