Popup form kalau klik chat
- Belum ada validasi form,
- Sudah tersimpan di localstorage

--- a/pages/chat.html
+++ b/pages/chat.html
@@ -54,7 +54,7 @@
         </form>
 
         <div class="container-button">
-            <a href="#" class="button-reset">Reset</a>
+            <a href="#" class="button-reset">Close</a>
             <a href="#" class="button-send">Send</a>
         </div>
     </div>
