fix the form so its simetrical

--- a/pages/consultation.html
+++ b/pages/consultation.html
@@ -131,14 +131,14 @@
                 </div>
     
                 <!-- Riwayat Penyakit -->
-                <div class="container-input" style="transform: translateY(-80px);">
-                    <label for="riwayatPenyakit" style="width: 339px;">Riwayat Penyakit</label>
+                <div class="container-input" style="transform: translateY(-105px);">
+                    <label for="riwayatPenyakit">Riwayat Penyakit</label>
                     <textarea id="riwayatPenyakit" name="riwayatPenyakit"></textarea>
                 </div>
     
                 <!-- Pembayaran Via -->
-                <div class="container-input" style="transform: translateY(-90px);">
-                    <label for="pembayaranVia" style="transform: translateX(-10px);">Pembayaran Via</label>
+                <div class="container-input" style="transform: translateY(-140px);">
+                    <label for="pembayaranVia">Pembayaran Via</label>
                     <select id="pembayaranVia" name="pembayaranVia">
                         <option value="qris">Qris</option>
                         <option value="bni">BNI</option>
