--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -6,9 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="aboutus.css">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/aboutus.css">
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 <body style="position: relative;">
     <!-- <img src="img/elements-2.png" class="vector-judul"> -->
