--- a/pages/stageofpregnancy.html
+++ b/pages/stageofpregnancy.html
@@ -35,7 +35,7 @@
     <!--JUDUL-->
     <div class="judul-symptom">
         <div class="container-judul">
-            <h1 style=" color: #1090CB; font-size: 90px;">Symptom & Advice</h1>
+            <h1 style=" color: #1090CB; font-size: 90px;">Stage of Pregnancy</h1>
             <img src="/image/symptom_Star 1.svg" class="vector-bintang">
         </div>
     </div>
