--- a/pages/nutritionguide.html
+++ b/pages/nutritionguide.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body style="position: relative;">
-    <!-- <img src="img/elements-2.png" class="vector-judul"> -->
-    <img src="img/elements-2.png" class="vector-judul2">
+    <!-- <img src="images/premiumvector.png" class="vector-judul"> -->
+    <img src="images/premiumvector.png" class="vector-judul2">
 
 
     <!-- Navbar -->
@@ -56,7 +56,7 @@
     <!-- BACKGROUNDNYA PUTIH -->
     <section>
         <div class="container-materi">
-            <img style="margin-right: 10px;" src="img/asam-folat.png" alt="">
+            <img src="images/asam-folat.png" alt="">
             <div>
                 <h1>Asam Folat</h1>
                 <p>
@@ -73,7 +73,7 @@
 
     <!-- Kalsium -->
     <!-- BACKGROUNDNYA PUTIH -->
-    <section>
+    <section style="background-color: #ffffff;">
         <div class="container-materi">
             <div style="text-align: right;">
                 <h1>Kalsium</h1>
@@ -84,7 +84,7 @@
                     atau suplemen kalsium yang sesuai.
                 </p>
             </div>
-            <img style="margin-left: 10px;" src="img/kalsium.png" alt="">
+            <img src="images/kalsium.png" alt="">
         </div>
     </section>
 
@@ -93,7 +93,7 @@
     <!-- BACKGROUNDNYA PUTIH -->
     <section>
         <div class="container-materi" style="gap: 10px;">
-            <img style="margin-right: 10px;" src="img/zat-besi.png" alt="">
+            <img src="images/zat-besi.png" alt="">
             <div>
                 <h1>Zat Besi</h1>
                 <p>
@@ -118,7 +118,7 @@
                     lemak, dan sumber protein sehat lainnya.
                 </p>
             </div>
-            <img style="margin-left: 10px;" src="img/protein.png" alt="">
+            <img style="margin-left: 10px;" src="images/protein.png" alt="">
         </div>
     </section>
 
@@ -127,7 +127,7 @@
     <!-- BACKGROUNDNYA PUTIH -->
     <section>
         <div class="container-materi" style="gap: 10px;">
-            <img style="margin-right: 10px;" src="img/serat-karbo.png" alt="">
+            <img style="margin-right: 10px;" src="images/serat-karbo.png" alt="">
             <div>
                 <h1>Serat dan Karbohidrat</h1>
                 <p>
@@ -150,7 +150,7 @@
                     Asam lemak omega-3, terutama DHA, adalah penting untuk perkembangan otak dan mata bayi. Anda dapat mendapatkan omega-3 dari ikan berlemak seperti salmon, sarden, atau suplemen minyak ikan.
                 </p>
             </div>
-            <img style="margin-left: 10px;" src="img/protein.png" alt="">
+            <img style="margin-left: 10px;" src="images/omega-3.png" alt="left">
         </div>
     </section>
 
@@ -160,7 +160,7 @@
     <!-- BACKGROUNDNYA PUTIH -->
     <section>
         <div class="container-materi" style="gap: 10px;">
-            <img style="margin-right: 10px;" src="img/air.png" alt="">
+            <img style="margin-right: 10px;" src="images/air.png" alt="">
             <div>
                 <h1>Air</h1>
                 <p>
