--- a/pages/nutritionguide.html
+++ b/pages/nutritionguide.html
@@ -11,15 +11,15 @@
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body style="position: relative;">
-    <!-- <img src="images/premiumvector.png" class="vector-judul"> -->
-    <img src="images/premiumvector.png" class="vector-judul2">
+    <!-- <img src="image/premiumvector.png" class="vector-judul"> -->
+    <img src="image/premiumvector.png" class="vector-judul2">
 
 
     <!-- Navbar -->
     <nav class="navbar">
         <!-- Logo dan Judul -->
         <div class="nav-flex-judul">
-            <img src="img/logo.png" style="width: 15rem;">
+            <img src="image/logo.png" style="width: 15rem;">
             <h1 style="color: #1090CB; font-size: 29px;"></h1>
             <div class="vertical-line"></div>
             <!-- Atribut -->
@@ -31,7 +31,7 @@
         </div>
         <!-- Login dan Search-->
         <div class="nav-flex-log">
-            <img src="img/search.png">
+            <img src="image/search.png">
             <a href="/pages/login.html"><button>Login</button></a>
         </div>    
     </nav>
@@ -40,15 +40,15 @@
     <div class="judul-Nutrition-Guide" style="margin-top: 50px;">
         <div class="container-judul">
             <h1 style=" color: #1090CB; font-size: 90px;"></nav>Nutrition Guide</h1>
-            <img src="img/star.png" class="vector-bintang">
+            <img src="image/star.png" class="vector-bintang">
         </div>
     </div>
 
 
     <!--SECTION GAMBAR-->
     <div class="container-gambar">
-        <img src="img/nutri-1.png" style="width: 553px; height: 369px; ">
-        <img src="img/services-1.png" style="width: 375px; height: 414px;">
+        <img src="image/nutri-1.png" style="width: 553px; height: 369px; ">
+        <img src="image/services-1.png" style="width: 375px; height: 414px;">
     </div>
 
 
@@ -56,7 +56,7 @@
     <!-- BACKGROUNDNYA PUTIH -->
     <section>
         <div class="container-materi">
-            <img src="images/asam-folat.png" alt="">
+            <img src="image/asam-folat.png" alt="">
             <div>
                 <h1>Asam Folat</h1>
                 <p>
@@ -84,7 +84,7 @@
                     atau suplemen kalsium yang sesuai.
                 </p>
             </div>
-            <img src="images/kalsium.png" alt="">
+            <img src="image/kalsium.png" alt="">
         </div>
     </section>
 
@@ -93,7 +93,7 @@
     <!-- BACKGROUNDNYA PUTIH -->
     <section>
         <div class="container-materi" style="gap: 10px;">
-            <img src="images/zat-besi.png" alt="">
+            <img src="image/zat-besi.png" alt="">
             <div>
                 <h1>Zat Besi</h1>
                 <p>
@@ -118,7 +118,7 @@
                     lemak, dan sumber protein sehat lainnya.
                 </p>
             </div>
-            <img style="margin-left: 10px;" src="images/protein.png" alt="">
+            <img style="margin-left: 10px;" src="image/protein.png" alt="">
         </div>
     </section>
 
@@ -127,7 +127,7 @@
     <!-- BACKGROUNDNYA PUTIH -->
     <section>
         <div class="container-materi" style="gap: 10px;">
-            <img style="margin-right: 10px;" src="images/serat-karbo.png" alt="">
+            <img style="margin-right: 10px;" src="image/serat-karbo.png" alt="">
             <div>
                 <h1>Serat dan Karbohidrat</h1>
                 <p>
@@ -150,7 +150,7 @@
                     Asam lemak omega-3, terutama DHA, adalah penting untuk perkembangan otak dan mata bayi. Anda dapat mendapatkan omega-3 dari ikan berlemak seperti salmon, sarden, atau suplemen minyak ikan.
                 </p>
             </div>
-            <img style="margin-left: 10px;" src="images/omega-3.png" alt="left">
+            <img style="margin-left: 10px;" src="image/omega-3.png" alt="left">
         </div>
     </section>
 
@@ -160,7 +160,7 @@
     <!-- BACKGROUNDNYA PUTIH -->
     <section>
         <div class="container-materi" style="gap: 10px;">
-            <img style="margin-right: 10px;" src="images/air.png" alt="">
+            <img style="margin-right: 10px;" src="image/air.png" alt="">
             <div>
                 <h1>Air</h1>
                 <p>
