--- a/pages/nutritionguide.html
+++ b/pages/nutritionguide.html
@@ -12,15 +12,15 @@
 </head>
 <body style="position: relative;">
     <!-- <img src="image/premiumvector.png" class="vector-judul"> -->
-    <img src="image/premiumvector.png" class="vector-judul2">
+    <img src="/image/premiumvector.png" class="vector-judul2">
 
 
     <!-- Navbar -->
     <nav class="navbar">
         <!-- Logo dan Judul -->
         <div class="nav-flex-judul">
-            <img src="image/logo.png" style="width: 15rem;">
-            <h1 style="color: #1090CB; font-size: 29px;"></h1>
+            <img src="/image/landing_logo.svg" style="width: 92px; height: 92px;">
+            <h1 style="color: #1090CB; font-size: 29px;">PROMIL</h1>
             <div class="vertical-line"></div>
             <!-- Atribut -->
             <div class="nav-flex-atribut">
@@ -31,24 +31,16 @@
         </div>
         <!-- Login dan Search-->
         <div class="nav-flex-log">
-            <img src="image/search.png">
+            <img src="/image/landing_nav_search.svg">
             <a href="/pages/login.html"><button>Login</button></a>
-        </div>    
+        </div>     
     </nav>
-       
-    <!--JUDUL-->
-    <div class="judul-Nutrition-Guide" style="margin-top: 50px;">
-        <div class="container-judul">
-            <h1 style=" color: #1090CB; font-size: 90px;"></nav>Nutrition Guide</h1>
-            <img src="image/star.png" class="vector-bintang">
-        </div>
-    </div>
 
 
     <!--SECTION GAMBAR-->
     <div class="container-gambar">
-        <img src="image/nutri-1.png" style="width: 553px; height: 369px; ">
-        <img src="image/services-1.png" style="width: 375px; height: 414px;">
+        <img src="/image/nutri-1.png" style="width: 553px; height: 369px; ">
+        <img src="/image/services-1.png" style="width: 375px; height: 414px;">
     </div>
 
 
@@ -56,7 +48,7 @@
     <!-- BACKGROUNDNYA PUTIH -->
     <section>
         <div class="container-materi">
-            <img src="image/asam-folat.png" alt="">
+            <img src="/image/asam-folat.png" alt="">
             <div>
                 <h1>Asam Folat</h1>
                 <p>
@@ -84,7 +76,7 @@
                     atau suplemen kalsium yang sesuai.
                 </p>
             </div>
-            <img src="image/kalsium.png" alt="">
+            <img src="/image/kalsium.png" alt="">
         </div>
     </section>
 
@@ -93,7 +85,7 @@
     <!-- BACKGROUNDNYA PUTIH -->
     <section>
         <div class="container-materi" style="gap: 10px;">
-            <img src="image/zat-besi.png" alt="">
+            <img src="/image/zat-besi.png" alt="">
             <div>
                 <h1>Zat Besi</h1>
                 <p>
@@ -118,7 +110,7 @@
                     lemak, dan sumber protein sehat lainnya.
                 </p>
             </div>
-            <img style="margin-left: 10px;" src="image/protein.png" alt="">
+            <img style="margin-left: 10px;" src="/image/protein.png" alt="">
         </div>
     </section>
 
@@ -127,7 +119,7 @@
     <!-- BACKGROUNDNYA PUTIH -->
     <section>
         <div class="container-materi" style="gap: 10px;">
-            <img style="margin-right: 10px;" src="image/serat-karbo.png" alt="">
+            <img style="margin-right: 10px;" src="/image/serat-karbo.png" alt="">
             <div>
                 <h1>Serat dan Karbohidrat</h1>
                 <p>
@@ -150,7 +142,7 @@
                     Asam lemak omega-3, terutama DHA, adalah penting untuk perkembangan otak dan mata bayi. Anda dapat mendapatkan omega-3 dari ikan berlemak seperti salmon, sarden, atau suplemen minyak ikan.
                 </p>
             </div>
-            <img style="margin-left: 10px;" src="image/omega-3.png" alt="left">
+            <img style="margin-left: 10px;" src="/image/omega-3.png" alt="left">
         </div>
     </section>
 
@@ -160,7 +152,7 @@
     <!-- BACKGROUNDNYA PUTIH -->
     <section>
         <div class="container-materi" style="gap: 10px;">
-            <img style="margin-right: 10px;" src="image/air.png" alt="">
+            <img style="margin-right: 10px;" src="/image/air.png" alt="">
             <div>
                 <h1>Air</h1>
                 <p>
