Update nutrition styling

--- a/pages/nutritionguide.html
+++ b/pages/nutritionguide.html
@@ -12,7 +12,7 @@
 </head>
 <body style="position: relative;">
     <!-- <img src="image/premiumvector.png" class="vector-judul"> -->
-    <img src="/image/premiumvector.png" class="vector-judul2">
+    <!-- <img src="/image/premiumvector.png" class="vector-judul2"> -->
 
 
     <!-- Navbar -->
@@ -39,15 +39,15 @@
 
     <!--SECTION GAMBAR-->
     <div class="container-gambar">
-        <img src="/image/nutri-1.png" style="width: 553px; height: 369px; ">
-        <img src="/image/services-1.png" style="width: 375px; height: 414px;">
+        <img src="/image/nutri-1.svg" style="width: 469px; height: 437px; ">
+        <img src="/image/services-1.svg" style="width: 413px; height: 435px;">
     </div>
 
 
     <!-- Asam Folat -->
     <!-- BACKGROUNDNYA PUTIH -->
     <section>
-        <div class="container-materi">
+        <div class="container-materi-kiri">
             <img src="/image/asam-folat.png" alt="">
             <div>
                 <h1>Asam Folat</h1>
@@ -66,8 +66,8 @@
     <!-- Kalsium -->
     <!-- BACKGROUNDNYA PUTIH -->
     <section style="background-color: #ffffff;">
-        <div class="container-materi">
-            <div style="text-align: right;">
+        <div class="container-materi-kanan">
+            <div style="text-align: right; transform: translateY(-15px);">
                 <h1>Kalsium</h1>
                 <p>
                     Kalsium adalah mineral penting yang diperlukan untuk perkembangan tulang dan gigi bayi. Pastikan Anda
@@ -84,7 +84,7 @@
     <!-- Zat Besi -->
     <!-- BACKGROUNDNYA PUTIH -->
     <section>
-        <div class="container-materi" style="gap: 10px;">
+        <div class="container-materi-kiri">
             <img src="/image/zat-besi.png" alt="">
             <div>
                 <h1>Zat Besi</h1>
@@ -101,7 +101,7 @@
     <!-- Protein -->
     <!-- BACKGROUNDNYA PUTIH -->
     <section>
-        <div class="container-materi" style="gap: 30px;">
+        <div class="container-materi-kanan" style="gap: 30px;">
             <div style="text-align: right;">
                 <h1>Protein</h1>
                 <p>
@@ -110,7 +110,7 @@
                     lemak, dan sumber protein sehat lainnya.
                 </p>
             </div>
-            <img style="margin-left: 10px;" src="/image/protein.png" alt="">
+            <img src="/image/protein.png" alt="">
         </div>
     </section>
 
@@ -118,8 +118,8 @@
     <!-- Serat dan Karbohidrat -->
     <!-- BACKGROUNDNYA PUTIH -->
     <section>
-        <div class="container-materi" style="gap: 10px;">
-            <img style="margin-right: 10px;" src="/image/serat-karbo.png" alt="">
+        <div class="container-materi-kiri" >
+            <img src="/image/serat-karbo.png" alt="">
             <div>
                 <h1>Serat dan Karbohidrat</h1>
                 <p>
@@ -135,14 +135,14 @@
     <!-- Omega-3 -->
     <!-- BACKGROUNDNYA PUTIH -->
     <section>
-        <div class="container-materi" style="gap: 30px;">
+        <div class="container-materi-kanan" style="gap: 30px;">
             <div style="text-align: right;">
                 <h1>Omega-3</h1>
                 <p>
                     Asam lemak omega-3, terutama DHA, adalah penting untuk perkembangan otak dan mata bayi. Anda dapat mendapatkan omega-3 dari ikan berlemak seperti salmon, sarden, atau suplemen minyak ikan.
                 </p>
             </div>
-            <img style="margin-left: 10px;" src="/image/omega-3.png" alt="left">
+            <img  src="/image/omega-3.png" alt="left">
         </div>
     </section>
 
@@ -151,8 +151,8 @@
     <!-- Air -->
     <!-- BACKGROUNDNYA PUTIH -->
     <section>
-        <div class="container-materi" style="gap: 10px;">
-            <img style="margin-right: 10px;" src="/image/air.png" alt="">
+        <div class="container-materi-kiri">
+            <img src="/image/air.png" alt="">
             <div>
                 <h1>Air</h1>
                 <p>
