Fix judul dan navigasi
- Judul nutrition guide,
- Navigasi di index

--- a/pages/index.html
+++ b/pages/index.html
@@ -20,7 +20,7 @@
             <!-- Atribut -->
             <div class="nav-flex-atribut">
                 <a href="/pages/index.html" id="home-link">Home</a>
-                <a href="/pages/aboutus.html" id="about-link">About us</a>
+                <a href="/pages/about-us.html" id="about-link">About us</a>
                 <a href="/pages/services.html" id="services-link">Services</a>
             </div>  
         </div>
@@ -69,7 +69,7 @@
                 </a>
 
                 <!-- Nutrition Guide -->
-                <a href="/pages/nutrition.html" style="margin-top: 108px;"> 
+                <a href="/pages/nutritionguide.html" style="margin-top: 108px;"> 
                     <img src="/image/landing_sec2_fitur_nutrition.svg" alt="">
                     <div class="sec2-fitur-konten">
                         <h1 style="font-size: 25px; transform: translateY(9px);">Nutrition Guide</h1>
