--- a/pages/nutritionguide.html
+++ b/pages/nutritionguide.html
@@ -25,7 +25,7 @@
             <!-- Atribut -->
             <div class="nav-flex-atribut">
                 <a href="/pages/index.html" id="home-link">Home</a>
-                <a href="/pages/aboutus.html" id="about-link">About us</a>
+                <a href="/pages/about-us.html" id="about-link">About us</a>
                 <a href="/pages/services.html" id="services-link">Services</a>
             </div>  
         </div>
@@ -36,6 +36,13 @@
         </div>     
     </nav>
 
+    <!--JUDUL-->
+    <div class="judul-symptom">
+        <div class="container-judul">
+            <h1 style=" color: #1090CB; font-size: 90px;">Nutrition Guide</h1>
+            <img src="/image/symptom_Star 1.svg" class="vector-bintang">
+        </div>
+    </div>
 
     <!--SECTION GAMBAR-->
     <div class="container-gambar">
