--- a/pages/consultation.html
+++ b/pages/consultation.html
@@ -24,7 +24,7 @@
             <!-- Atribut -->
             <div class="nav-flex-atribut">
                 <a href="/pages/index.html" id="home-link">Home</a>
-                <a href="/pages/aboutus.html" id="about-link">About us</a>
+                <a href="/pages/about-us.html" id="about-link">About us</a>
                 <a href="/pages/services.html" id="services-link">Services</a>
             </div>  
         </div>
