Remove search feature

--- a/pages/symptomadvice.html
+++ b/pages/symptomadvice.html
@@ -23,15 +23,12 @@
             <!-- Atribut -->
             <div class="nav-flex-atribut">
                 <a href="/pages/index.html" id="home-link">Home</a>
-                <a href="/pages/aboutus.html" id="about-link">About us</a>
+                <a href="/pages/about-us.html" id="about-link">About us</a>
                 <a href="/pages/services.html" id="services-link">Services</a>
             </div>  
         </div>
         <!-- Login dan Search-->
-        <div class="nav-flex-log">
-            <img src="/image/landing_nav_search.svg">
-            <a href="/pages/login.html"><button>Login</button></a>
-        </div>     
+        <a href="/pages/login.html"><button>Login</button></a>  
     </nav>
         
     <!--JUDUL-->
