--- a/pages/index.html
+++ b/pages/index.html
@@ -38,7 +38,7 @@
             </p>
             <!-- Button -->
             <div class="sec1-button">
-                <a href="/pages/contactus.html"><button class="sec1-contactus">Contact Us</button></a>
+                <button class="sec1-contactus" id="footer-link">Contact Us</button>
             </div>
         </div>
         <img src="/image/landing_sec1_image.svg" class="sec1-image">
@@ -49,7 +49,7 @@
     </section>
 
     <!-- Section 2 -->
-    <section class="section2">
+    <section class="section2" id="services-section">
         <h1 style="font-size: 40px;">Our <span style="color: #1090CB;">Services</span></h1>
         <!-- Fitur -->
         <div class="sec2-fitur">
@@ -126,7 +126,7 @@
   
 
     <!-- Footer -->
-    <footer>
+    <footer id="footer-id">
         <div class="footer-konten">
             <!-- Promil -->
             <div>
@@ -165,5 +165,6 @@
     <script src="/javascript/navigationNavbar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script src="/javascript/calculateBirth.js"></script>
+    <script src="/javascript/smoothScroll.js"></script>
 </body>
 </html>
