update services link on navbar

--- a/pages/index.html
+++ b/pages/index.html
@@ -21,7 +21,7 @@
             <div class="nav-flex-atribut">
                 <a href="/pages/index.html" id="home-link">Home</a>
                 <a href="/pages/about-us.html" id="about-link">About us</a>
-                <a href="/pages/services.html" id="services-link">Services</a>
+                <a href="/pages/index.html#services-section" id="services-link">Services</a>
             </div>  
         </div>
         <!-- Login dan Search-->
