--- a/pages/stageofpregnancy.html
+++ b/pages/stageofpregnancy.html
@@ -22,11 +22,11 @@
             <div class="nav-flex-atribut">
                 <a href="/pages/index.html" id="home-link">Home</a>
                 <a href="/pages/about-us.html" id="about-link">About us</a>
-                <a href="/pages/services.html" id="services-link">Services</a>
+                <a href="/pages/index.html#services-section" id="services-link">Services</a>
             </div>  
         </div>
         <!-- Login dan Search-->
-        <a href="/pages/login.html"><button>Login</button></a>  
+        <a href="/pages/login.html"><button>Login</button></a>
     </nav>
 
     <!--JUDUL-->
