--- a/pages/stageofpregnancy.html
+++ b/pages/stageofpregnancy.html
@@ -42,7 +42,7 @@
     <div class="container-trisemester">
         <img src="/image/TS1.svg" alt="">
         <p> 
-            Pertumbuhan janin dapat sangat bervariasi antarindividu, namun selama trimester pertama janin umumnya 
+            Trisemester pertama terjadi pada usia kehamilam 0 - 13 Minggu. Pertumbuhan janin dapat sangat bervariasi antarindividu, namun selama trimester pertama janin umumnya 
             akan tumbuh dari sekitar 0,64 cm di akhir bulan pertama (lebih kecil dari sebutir beras) hingga sekitar 
             10 cm di akhir minggu ke-12 dan beratnya sekitar 50-60 gram.
         </p>
@@ -54,7 +54,7 @@
     <div class="container-trisemester">
         <img src="/image/TS2.svg" alt="">
         <p> 
-            Di akhir trimester kedua, janin telah berkembang jauh dari 10 cm menjadi 35 cm dan beratnya mencapai 1-1,2 kg. 
+            Trisemester Kedua terjadi pada usia kehamilan 14 - 26 Minggu. Di akhir trimester kedua, janin telah berkembang jauh dari 10 cm menjadi 35 cm dan beratnya mencapai 1-1,2 kg. 
             Di trimester ini, jenis kelamin bayi bisa diketahui melalui pemeriksaan USG di sekitar usia kehamilan 20 minggu.
         </p>
 
@@ -65,7 +65,7 @@
     <div class="container-trisemester">
         <img src="/image/TS3.svg" alt="">
         <p> 
-            Ini adalah periode di mana berat janin meningkat pesat dan organ-organ menjadi matang sehingga siap berfungsi saat lahir. 
+            Trisemester Ketiga terjadi pada usia kehamilan 27 - 40 Minggu. Ini adalah periode di mana berat janin meningkat pesat dan organ-organ menjadi matang sehingga siap berfungsi saat lahir. 
             Di akhir trimester ketiga menjelang waktu kelahiran, janin memiliki panjang sekitar 46-51 cm dan beratnya bisa di atas 3 kg.
         </p>
     </div>
