--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -2,41 +2,44 @@
 </body>
 </html>
 <html lang="en">
-<head> <link rel="stylesheet" href="style.css">
+<head> <link rel="stylesheet" href="about_us.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <title>Welcome to PROMIL!</title>
     <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/aboutus.css">
+    <link rel="stylesheet" href="/css/about_us.css">
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body style="position: relative;">
-    <!-- <img src="img/elements-2.png" class="vector-judul"> -->
-    <!-- <img src="img/elements-2.png" class="vector-judul2"> -->
+    <!-- <img src="images/element.png" class="vector-judul"> -->
+    <!-- <img src="images/elements-2.png" class="vector-judul2"> -->
 
 
     <!-- Navbar -->
     <nav class="navbar">
         <!-- Logo dan Judul -->
         <div class="nav-flex-judul">
-            <img src="/image/landing_logo.svg" style="width: 92px; height: 92px;">
-            <h1 style="color: #1090CB; font-size: 29px;">PROMIL</h1>
+            <img src="images/logo.png" style="width: 15rem;">
+            <h1 style="color: #1090CB; font-size: 29px;"></h1>
             <div class="vertical-line"></div>
             <!-- Atribut -->
             <div class="nav-flex-atribut">
                 <a href="/pages/index.html" id="home-link">Home</a>
-                <a href="/pages/about-us.html" id="about-link">About us</a>
-                <a href="/pages/index.html#services-section" id="services-link">Services</a>
+                <a href="/pages/aboutus.html" id="about-link">About us</a>
+                <a href="/pages/services.html" id="services-link">Services</a>
             </div>  
         </div>
         <!-- Login dan Search-->
-        <a href="/pages/login.html"><button>Login</button></a>
+        <div class="nav-flex-log">
+            <img src="">
+            <a href="/pages/login.html"><button>Login</button></a>
+        </div>    
     </nav>
        
     <!--JUDUL-->
     <div class="judul-Nutrition-Guide" style="margin-top: 50px;">
         <div class="container-judul">
-            <h1 style=" color: #000000; font-size: 89px;"></nav>Welcome To Promil!</h1>
+            <h1 style=" color: #000000; font-size: 90px;"></nav>Welcome To Promil !</h1>
         </div>
     </div>
 
@@ -47,28 +50,28 @@
             <p style="font-weight:300;">Kami adalah tim yang berkomitmen untuk mendukung perjalanan kehamilan anda dengan informasi yang akurat, saran yang bermanfaat, dan sumber daya berkualitas.</p>
             <p style="font-weight:300;">Kami mengerti bahwa perjalanan kehamilan adalah momen yang sangat istimewa dalam hidup setiap orang, dan kami ingin membantu Anda merasakan pengalaman tersebut dengan penuh kebahagiaan dan keyakinan.</p>
         </div>
-        <img src="img/vector.png" style="width: 375px; height: 414px;">
+        <img src="images/vector.png" style="width: 375px; height: 414px;">
     </div>
 
     <!--SECTION TEAM-->
     <div class="container-team">
         <div class="row">
             <div class="card">
-                <img src="img/default.png" style="width: 200px;">
+                <img src="images/erina.png" style="width: 200px;">
                 <div class="card-footer">
                     <h5>Erina Seviyanti</h5>
                     <p>Quality Assurance (QA)</p>
                 </div>
             </div>
             <div class="card">
-                <img src="img/aloula.png" style="width: 200px;">
+                <img src="images/aloula.png" style="width: 200px;">
                 <div class="card-footer">
                     <h5>Aloula Galuh Mehak</h5>
                     <p>Project Leader</p>
                 </div>
             </div>
             <div class="card">
-                <img src="img/billy.png" style="width: 200px;">
+                <img src="images/billyy.png" style="width: 200px;">
                 <div class="card-footer">
                     <h5>Billy Fahd Qodama</h5>
                     <p>Quality Assurance (QA)</p>
@@ -77,28 +80,28 @@
         </div>
         <div class="row">
             <div class="card" style="margin-left: 20px;">
-                <img src="img/delfi.png" style="width: 200px;height:270px" >
+                <img src="images/delfi.png" style="width: 200px;height:270px" >
                 <div class="card-footer">
                     <h5>Delfi Kofita Candra Putri</h5>
                     <p>Front End Engineer</p>
                 </div>
             </div>
             <div class="card">
-                <img src="img/agnes.png" style="width: 200px;height:270px">
+                <img src="images/agnes.png" style="width: 200px;height:270px">
                 <div class="card-footer">
                     <h5>Agnes Theresia Hasugian</h5>
                     <p>Front End Engineer</p>
                 </div>
             </div>
             <div class="card">
-                <img src="img/default.png" style="width: 200px;height:270px">
+                <img src="images/eryantina.png" style="width: 200px;height:270px">
                 <div class="card-footer">
                     <h5>Eryantina Wahyu Hidayat</h5>
                     <p>Back End Engineer</p>
                 </div>
             </div>
             <div class="card" style="margin-right: 20px;">
-                <img src="img/default.png" style="width: 200px;height:270px">
+                <img src="images/bagass.png" style="width: 200px;height:270px">
                 <div class="card-footer">
                     <h5>Bagas Ariyo Seno</h5>
                     <p>Back End Engineer</p>
