--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -19,21 +19,18 @@
     <nav class="navbar">
         <!-- Logo dan Judul -->
         <div class="nav-flex-judul">
-            <img src="images/logo.png" style="width: 15rem;">
-            <h1 style="color: #1090CB; font-size: 29px;"></h1>
+            <img src="/image/landing_logo.svg" style="width: 92px; height: 92px;">
+            <h1 style="color: #1090CB; font-size: 29px;">PROMIL</h1>
             <div class="vertical-line"></div>
             <!-- Atribut -->
             <div class="nav-flex-atribut">
                 <a href="/pages/index.html" id="home-link">Home</a>
-                <a href="/pages/aboutus.html" id="about-link">About us</a>
-                <a href="/pages/services.html" id="services-link">Services</a>
+                <a href="/pages/about-us.html" id="about-link">About us</a>
+                <a href="/pages/index.html#services-section" id="services-link">Services</a>
             </div>  
         </div>
         <!-- Login dan Search-->
-        <div class="nav-flex-log">
-            <img src="">
-            <a href="/pages/login.html"><button>Login</button></a>
-        </div>    
+        <a href="/pages/login.html"><button>Login</button></a>
     </nav>
        
     <!--JUDUL-->
