--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -2,12 +2,12 @@
 </body>
 </html>
 <html lang="en">
-<head> <link rel="stylesheet" href="about_us.css">
+<head> <link rel="stylesheet" href="css/aboutus.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to PROMIL!</title>
     <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/about_us.css">
+    <link rel="stylesheet" href="/css/aboutus.css">
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body style="position: relative;">
@@ -36,7 +36,7 @@
     <!--JUDUL-->
     <div class="judul-Nutrition-Guide" style="margin-top: 50px;">
         <div class="container-judul">
-            <h1 style=" color: #000000; font-size: 90px;"></nav>Welcome To Promil !</h1>
+            <h1 style=" color: #000000; font-size: 85px;"></nav>Welcome To Promil!</h1>
         </div>
     </div>
 
