--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -54,21 +54,21 @@
     <div class="container-team">
         <div class="row">
             <div class="card">
-                <img src="images/erina.png" style="width: 200px;">
+                <img src="images/erina.png" style="width: 200px;height:270px" >
                 <div class="card-footer">
                     <h5>Erina Seviyanti</h5>
                     <p>Quality Assurance (QA)</p>
                 </div>
             </div>
             <div class="card">
-                <img src="images/aloula.png" style="width: 200px;">
+                <img src="images/aloula.png" style="width: 200px;height:270px" >
                 <div class="card-footer">
                     <h5>Aloula Galuh Mehak</h5>
                     <p>Project Leader</p>
                 </div>
             </div>
             <div class="card">
-                <img src="images/billyy.png" style="width: 200px;">
+                <img src="images/billyy.png" style="width: 200px;height:270px" >
                 <div class="card-footer">
                     <h5>Billy Fahd Qodama</h5>
                     <p>Quality Assurance (QA)</p>
