--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -24,9 +24,9 @@
             <div class="vertical-line"></div>
             <!-- Atribut -->
             <div class="nav-flex-atribut">
-                <a href="/pages/index.html" id="home-link">Home</a>
+                <a href="/index.html" id="home-link">Home</a>
                 <a href="/pages/about-us.html" id="about-link">About us</a>
-                <a href="/pages/index.html#services-section" id="services-link">Services</a>
+                <a href="/index.html#services-section" id="services-link">Services</a>
             </div>  
         </div>
         <!-- Login dan Search-->
@@ -47,28 +47,28 @@
             <p style="font-weight:300;">Kami adalah tim yang berkomitmen untuk mendukung perjalanan kehamilan anda dengan informasi yang akurat, saran yang bermanfaat, dan sumber daya berkualitas.</p>
             <p style="font-weight:300;">Kami mengerti bahwa perjalanan kehamilan adalah momen yang sangat istimewa dalam hidup setiap orang, dan kami ingin membantu Anda merasakan pengalaman tersebut dengan penuh kebahagiaan dan keyakinan.</p>
         </div>
-        <img src="images/vector.png" style="width: 375px; height: 414px;">
+        <img src="/image/vector.png" style="width: 375px; height: 414px;">
     </div>
 
     <!--SECTION TEAM-->
     <div class="container-team">
         <div class="row">
             <div class="card">
-                <img src="image/erina.svg" style="width: 200px;height:270px">
+                <img src="/image/erina.svg" style="width: 200px;height:270px">
                 <div class="card-footer">
                     <h5>Erina Seviyanti</h5>
                     <p>Quality Assurance (QA)</p>
                 </div>
             </div>
             <div class="card">
-                <img src="images/aloula.png" style="width: 200px;height:270px" >
+                <img src="/image/aloula.png" style="width: 200px;height:270px" >
                 <div class="card-footer">
                     <h5>Aloula Galuh Mehak</h5>
                     <p>Project Leader</p>
                 </div>
             </div>
             <div class="card">
-                <img src="images/billyy.png" style="width: 200px;height:270px" >
+                <img src="/image/billyy.png" style="width: 200px;height:270px" >
                 <div class="card-footer">
                     <h5>Billy Fahd Qodama</h5>
                     <p>Quality Assurance (QA)</p>
@@ -77,28 +77,28 @@
         </div>
         <div class="row">
             <div class="card" style="margin-left: 20px;">
-                <img src="images/delfi.png" style="width: 200px;height:270px" >
+                <img src="/image/delfi.png" style="width: 200px;height:270px" >
                 <div class="card-footer">
                     <h5>Delfi Kofita Candra Putri</h5>
                     <p>Front End Engineer</p>
                 </div>
             </div>
             <div class="card">
-                <img src="images/agnes.png" style="width: 200px;height:270px">
+                <img src="image/agnes.png" style="width: 200px;height:270px">
                 <div class="card-footer">
                     <h5>Agnes Theresia Hasugian</h5>
                     <p>Front End Engineer</p>
                 </div>
             </div>
             <div class="card">
-                <img src="images/eryantina.png" style="width: 200px;height:270px">
+                <img src="/image/eryantina.png" style="width: 200px;height:270px">
                 <div class="card-footer">
                     <h5>Eryantina Wahyu Hidayat</h5>
                     <p>Back End Engineer</p>
                 </div>
             </div>
             <div class="card" style="margin-right: 20px;">
-                <img src="images/bagass.png" style="width: 200px;height:270px">
+                <img src="/image/bagass.png" style="width: 200px;height:270px">
                 <div class="card-footer">
                     <h5>Bagas Ariyo Seno</h5>
                     <p>Back End Engineer</p>
