--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -54,7 +54,7 @@
     <div class="container-team">
         <div class="row">
             <div class="card">
-                <img src="/image/erina.svg" style="width: 200px;height:270px">
+                <img src="/image/erina.png" style="width: 200px;height:270px">
                 <div class="card-footer">
                     <h5>Erina Seviyanti</h5>
                     <p>Quality Assurance (QA)</p>
@@ -84,7 +84,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="image/agnes.png" style="width: 200px;height:270px">
+                <img src="/image/agnes.png" style="width: 200px;height:270px">
                 <div class="card-footer">
                     <h5>Agnes Theresia Hasugian</h5>
                     <p>Front End Engineer</p>
