--- a/pages/consultation.html
+++ b/pages/consultation.html
@@ -23,9 +23,9 @@
             <div class="vertical-line"></div>
             <!-- Atribut -->
             <div class="nav-flex-atribut">
-                <a href="/pages/index.html" id="home-link">Home</a>
+                <a href="/index.html" id="home-link">Home</a>
                 <a href="/pages/about-us.html" id="about-link">About us</a>
-                <a href="/pages/index.html#services-section" id="services-link">Services</a>
+                <a href="/index.html#services-section" id="services-link">Services</a>
             </div>  
         </div>
         <!-- Login dan Search-->
