--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -34,75 +34,88 @@
     </nav>
        
     <!--JUDUL-->
-    <div class="judul-Nutrition-Guide" style="margin-top: 50px;">
-        <div class="container-judul">
-            <h1 style=" color: #000000; font-size: 85px;"></nav>Welcome To Promil!</h1>
-        </div>
+    <div class="container-judul">
+        <h1 style="font-size: 85px;">Welcome To Promil!</h1>
     </div>
-
 
     <!--SECTION GAMBAR-->
     <div class="container-gambar">
         <div class="jarak-header">
-            <p style="font-weight:300;">Kami adalah tim yang berkomitmen untuk mendukung perjalanan kehamilan anda dengan informasi yang akurat, saran yang bermanfaat, dan sumber daya berkualitas.</p>
-            <p style="font-weight:300;">Kami mengerti bahwa perjalanan kehamilan adalah momen yang sangat istimewa dalam hidup setiap orang, dan kami ingin membantu Anda merasakan pengalaman tersebut dengan penuh kebahagiaan dan keyakinan.</p>
+            <div>
+                <p>
+                    Kami adalah tim yang berkomitmen untuk mendukung perjalanan kehamilan anda dengan 
+                    informasi yang akurat, saran yang bermanfaat, dan sumber daya berkualitas.
+                </p>
+                <p>
+                    Kami mengerti bahwa perjalanan kehamilan adalah momen yang sangat istimewa dalam hidup setiap orang, 
+                    dan kami ingin membantu Anda merasakan pengalaman tersebut dengan penuh kebahagiaan dan keyakinan.
+                </p>
+            </div>
         </div>
-        <img src="/image/vector.png" style="width: 375px; height: 414px;">
+        <img src="/image/vector.png" style="width: 559px; height: 626px;">
     </div>
 
     <!--SECTION TEAM-->
     <div class="container-team">
+        <h1 class="judul-team">TEAM</h1>
         <div class="row">
-            <div class="card">
-                <img src="/image/erina.png" style="width: 200px;height:250px">
-                <div class="card-footer">
-                    <h5>Erina Seviyanti</h5>
-                    <p>Quality Assurance (QA)</p>
+            <!-- Erina Seviyanti -->
+            <div class="card" style="margin-left: 20px;">
+                <div class="container-foto">
+                    <img src="/image/erina.svg">
                 </div>
+                <h5>Erina Seviyanti</h5>
+                <p>Quality Assurance (QA)</p>
             </div>
-            <div class="card">
-                <img src="/image/aloula.png" style="width: 200px;height:250px" >
-                <div class="card-footer">
-                    <h5>Aloula Galuh Mehak</h5>
-                    <p>Project Leader</p>
+            <!-- Aloula Galuh Mehak -->
+            <div class="card" style="margin-left: 20px;">
+                <div class="container-foto">
+                    <img src="/image/aloula.svg">
                 </div>
+                <h5>Aloula Galuh Mehak</h5>
+                <p>Project Leader</p>
             </div>
-            <div class="card">
-                <img src="/image/billyy.png" style="width: 200px;height:250px" >
-                <div class="card-footer">
-                    <h5>Billy Fahd Qodama</h5>
-                    <p>Quality Assurance (QA)</p>
+            <!-- Billy Fahd Qodama -->
+            <div class="card" style="margin-left: 20px;">
+                <div class="container-foto">
+                    <img src="/image/billy.svg">
                 </div>
+                <h5>Billy Fahd Qodama</h5>
+                <p>Quality Assurance (QA)</p>
             </div>
         </div>
         <div class="row">
+            <!-- Delfi Kofita Candra Putri -->
             <div class="card" style="margin-left: 20px;">
-                <img src="/image/delfi.png" style="width: 200px;height:250px" >
-                <div class="card-footer">
-                    <h5>Delfi Kofita Candra Putri</h5>
-                    <p>Front End Engineer</p>
+                <div class="container-foto">
+                    <img src="/image/delfi.svg">
                 </div>
+                <h5>Delfi Kofita Candra Putri</h5>
+                <p>Front End Engineer</p>
             </div>
-            <div class="card">
-                <img src="/image/agnes.png" style="width: 200px;height:250px">
-                <div class="card-footer">
-                    <h5>Agnes Theresia Hasugian</h5>
-                    <p>Front End Engineer</p>
+            <!-- Agnes Theresia Hasugian -->
+            <div class="card" style="margin-left: 20px;">
+                <div class="container-foto">
+                    <img src="/image/agnes.svg">
                 </div>
+                <h5>Agnes Theresia Hasugian</h5>
+                <p>Front End Engineer</p>
             </div>
-            <div class="card">
-                <img src="/image/eryantina.png" style="width: 200px;height:250px">
-                <div class="card-footer">
-                    <h5>Eryantina Wahyu Hidayat</h5>
-                    <p>Back End Engineer</p>
+            <!-- Eryantina Wahyu Hidayat -->
+            <div class="card" style="margin-left: 20px;">
+                <div class="container-foto">
+                    <img src="/image/eryantina.svg">
                 </div>
+                <h5>Eryantina Wahyu Hidayat</h5>
+                <p>Back End Engineer</p>
             </div>
-            <div class="card" style="margin-right: 20px;">
-                <img src="/image/bagass.png" style="width: 200px;height:250px">
-                <div class="card-footer">
-                    <h5>Bagas Ariyo Seno</h5>
-                    <p>Back End Engineer</p>
+            <!-- Bagas Ariyo Seno -->
+            <div class="card" style="margin-left: 20px;">
+                <div class="container-foto">
+                    <img src="/image/bagas.svg">
                 </div>
+                <h5>Bagas Ariyo Seno</h5>
+                <p>Back End Engineer</p>
             </div>
         </div>
     </div>
